crates/toml_edit/tests/fixtures/invalid/duplicate-tables.stderr
TOML parse error at line 2, column 1
  |
2 | [a]
  | ^
Duplicate key `a` in document root

While parsing a Table Header
